# favicon-scanner

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/adapters/api/: fastapi_app.py
app/adapters/http/: aiohttp_fetcher.py
app/adapters/repositories/: rapid7_recog_repo.py  rapid7_xml_repo.py
app/adapters/system/: celery_app.py  logging_cfg.py  redis_result_store.py  target_expander_impl.py
app/domain/: scan_service.py
app/ports/: fingerprint_repository.py  http_fetcher.py  job_queue.py  result_store.py  target_expander.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
tests/: fakes.py  test_fastapi_api.py  test_redis_result_store.py  test_repo_xml.py  test_result_store.py  test_scan_rabbitmq.py  test_service.py  test_target_expander.py
